// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineNumbers adds an overlay class when firstVisibleChar is larger than 0 1`] = `
<div
  className="root overlay"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    1
  </div>
</div>
`;

exports[`LineNumbers allows passing in an external classname 1`] = `
<div
  className="root custom-classname"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    1
  </div>
</div>
`;

exports[`LineNumbers renders at least one line even when empty 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    1
  </div>
</div>
`;

exports[`LineNumbers renders line numbers 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    1
  </div>
  <div
    data-line={1}
  >
    2
  </div>
  <div
    data-line={2}
  >
    3
  </div>
</div>
`;

exports[`LineNumbers renders relative line numbers when so configured 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    2
  </div>
  <div
    data-line={1}
  >
    1
  </div>
  <div
    data-line={2}
  >
    0
  </div>
  <div
    data-line={3}
  >
    1
  </div>
  <div
    data-line={4}
  >
    2
  </div>
</div>
`;

exports[`LineNumbers should only render at most as many lines as are visible in the viewport 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    1
  </div>
  <div
    data-line={1}
  >
    2
  </div>
  <div
    data-line={2}
  >
    3
  </div>
  <div
    data-line={3}
  >
    4
  </div>
  <div
    data-line={4}
  >
    5
  </div>
  <div
    data-line={5}
  >
    6
  </div>
  <div
    data-line={6}
  >
    7
  </div>
  <div
    data-line={7}
  >
    8
  </div>
  <div
    data-line={8}
  >
    9
  </div>
  <div
    data-line={9}
  >
    10
  </div>
</div>
`;

exports[`LineNumbers starts off at the first visible line 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={2}
  >
    3
  </div>
  <div
    data-line={3}
  >
    4
  </div>
  <div
    data-line={4}
  >
    5
  </div>
</div>
`;

exports[`LineNumbers starts off at the first visible line with relative line numbers 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={2}
  >
    0
  </div>
  <div
    data-line={3}
  >
    1
  </div>
  <div
    data-line={4}
  >
    2
  </div>
</div>
`;

exports[`LineNumbers starts zero-indexed when using relative line numbers 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <div
    data-line={0}
  >
    0
  </div>
  <div
    data-line={1}
  >
    1
  </div>
  <div
    data-line={2}
  >
    2
  </div>
</div>
`;
